--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# User rules
+projects/*/data/            # Игнорировать данные в проектах
+projects/*/models/          # Игнорировать модели
+*.pkl                       # Сериализованные объекты
+.ipynb_checkpoints/         # Jupyter
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
